# ubicomp

./: .gitignore  LICENSE
hw/: .gitignore
hw/a2/: Assignment2.ipynb  pyproject.toml
hw/a3/: .gitignore  Assignment3.ipynb  pyproject.toml
hw/running_buddy/: README.md
hw/running_buddy/embedded/: README.md
hw/running_buddy/python/: pyproject.toml
hw/running_buddy/writeup/: README.md  makefile  week1.md  week2.md
jump_force/: README.md
jump_force/app/: .default.env  .env  .eslintrc.js  .gitignore  App.tsx  README.md  app.config.ts  eas.json  next.config.js  package.json  react-native.config.js
jump_force/app/assets/: README.md
jump_force/app/components/: Bluetooth.tsx  Navigation.tsx  ToggleDarkMode.tsx
jump_force/app/pages/: _document.ts  index.tsx
jump_force/app/screens/: AboutScreen.tsx  HomeScreen.tsx  Layout.tsx  NotFoundScreen.tsx  types.ts
jump_force/embedded/: platformio.ini
jump_force/functions/: .gitignore
jump_force/functions/jump_height/: .default.env  .dockerignore  .gitignore  .global.env  Dockerfile  README.md  pyproject.toml
jump_force/functions/jump_height/devops/: access_policy.json
jump_force/functions/jump_height/src/: config.py  main.py
jump_force/paper/: .gitignore  main.tex  makefile  references.bib
labs/lab2/: A2-Lab1_Pre-Lab_03-14-22.ipynb  pyproject.toml
labs/lab3/: A2-Lab2_Lab_03-22-2022_Blank.ipynb
running_buddy/embedded/: data.csv  main copy.cpp  main.cpp  platformio.ini  test.cpp
running_buddy/python/: data_logger.py  filename.csv
running_buddy/writeup/: makefile  week2.md
(+23 files in other folders)
