[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Joshua Schmidt <jns223@cornell.edu>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.1"
numpy = "^1.22.3"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
