[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Joshua Schmidt <jns223@cornell.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
